Safari365 Prod/src/objects/Consultant_Target_Schema__c.object
<CustomObject>
    <fields>
        <fullName>BHAG_Monthly__c</fullName>
        <label>BHAG (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Role__c</fullName>
        <label>Consultant Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consultant_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Ratio_Target__c</fullName>
        <label>Conversion Ratio Target (Annual)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Taget__c</fullName>
        <label>Gross Profit Target (Monthly)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <label>Number of Leads Required (Monthly)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Consultant Level Setup Ferret</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Gross_Profit_Taget__c</columns>
        <columns>BHAG_Monthly__c</columns>
        <columns>Conversion_Ratio_Target__c</columns>
        <columns>Number_of_Leads__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consultant Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultant Level Setup Ferret</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>